<resources>
    <string name="app_name">Practica_final_Grupo9_SergioyPablo</string>
    <string name="lbl1"> Creador de Personajes de DnD </string>
    <string name="lbl2"> Introduzca su nombre: </string>
    <string name="lbl3"> Crear un Personaje de DnD </string>
    <string name="btnE"> Estadisticas </string>
    <string name="btnH"> Habilidades </string>
    <string name="btnG"> Guardar Personaje </string>

    <string name="f"> FUERZA </string>
    <string name="d"> DESTREZA </string>
    <string name="co"> CONSTITUCIÓN </string>
    <string name="i"> INTELIGENCIA </string>
    <string name="s"> SABIDURIA </string>
    <string name="ca"> CARISMA </string>
    <string name="generar"> GENERAR </string>
    <string name="dado"> dado </string>

    <string name="atletismo">Atletismo</string>
    <string name="acrobacias">Acrobacias</string>
    <string name="jManos">Juego de Manos</string>
    <string name="sigilo">Sigilo</string>
    <string name="arcano">Arcano</string>
    <string name="historia">Historia</string>
    <string name="investigacion">Investigacion</string>
    <string name="naturaleza">Naturaleza</string>
    <string name="religion">Religion</string>
    <string name="medicina">Medicina</string>
    <string name="percepcion">Percepcion</string>
    <string name="perspicacia">Perspicacia</string>
    <string name="supervivencia">Supervivencia</string>
    <string name="tratoAnimales">Trato de Animales</string>
    <string name="engaño">Engaño</string>
    <string name="intimidacion">Intimidacion</string>
    <string name="interpretacion">Interpretacion</string>
    <string name="persuasion">Persuasion</string>

    <string-array name="spinner2">
        <item name="barbaro">Bárbaro</item>
        <item name="bardo">Bardo</item>
        <item name="clerigo">Clérigo</item>
        <item name="druida">Druida</item>
        <item name="guerrero">Guerrero</item>
        <item name="monje">Monje</item>
        <item name="paladin">Paladin</item>
        <item name="explorador">Explorador</item>
        <item name="picaro">Picaro</item>
        <item name="hechicero">Hechicero</item>
        <item name="brujo">Brujo</item>
        <item name="mago">Mago</item>
    </string-array>
</resources>